--- a/projeto1.html
+++ b/projeto1.html
@@ -34,7 +34,7 @@
                     </p>
                 </div>
                 </section>
-                <section id="nossahistoria">
+                <section>
                 <div class="container">
                     <h3>FUNDAÇÃO</h3>
                     <img src="./images/passistas.jpg"alt="Fundação">
