--- a/projeto1.html
+++ b/projeto1.html
@@ -32,7 +32,7 @@
     <section id="nossahistoria">
         <div class="container">
             <h2>NOSSA HISTÓRIA</h2>
-            <img src="./images/nossahistoria.jpg" alt="Nossa História">
+            <img src="./images/nossahistoria.jpg" alt="Nossa História" />
             <p>
                 A história da Acadêmicos do Salgueiro, escola de samba do Rio de Janeiro, está relacionada com a
                 formação da escola, as suas conquistas e os seus sambas mais famosos:
@@ -42,20 +42,20 @@
     <section>
         <div class="container">
             <h3>FUNDAÇÃO</h3>
-            <img src="./images/passistas.jpg" alt="Fundação">
+            <img src="./images/passistas.jpg" alt="Fundação" />
             <p>
                 A escola foi criada em 5 de maio de 1953, a partir da fusão das escolas de samba "Azul e Branco" e
                 "Depois eu Digo", que se localizavam no morro do Salgueiro. O nome da escola foi escolhido após uma
                 votação entre os fundadores.
             </p>
             <h3>CORES</h3>
-            <img src="./images/bandeira.jpg" alt="Cores">
+            <img src="./images/bandeira.jpg" alt="Cores" />
             <p>
                 As cores da escola são o vermelho e o branco, escolhidas por Francisco Assis Coelho, na reunião de
                 fundação.
             </p>
             <h3>DESFILES</h3>
-            <img src="./images/xango.jpg" alt="Desfiles">
+            <img src="./images/xango.jpg" alt="Desfiles" />
             <p>
                 A escola desfilou pela primeira vez em 1954, com o samba "Romaria à Bahia". O Salgueiro já foi campeão
                 do carnaval carioca nove vezes, em 1960, 1963, 1965, 1969, 1971, 1974, 1975, 1993 e 2009.
@@ -76,56 +76,53 @@
                 </form>
             </div>
     </section>
-    <div>
-        <section>
-            <div class="container">
-                <h3>SIGA-NOS NAS REDES SOCIAIS</h3>
-                <ul class="social-links">
-                    <li>
-                        <a href="https://www.instagram.com/salgueirooriginal/" title="Instagram">
-                            <img src="./images/instagram.png" alt="Ir para Instagram" />
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.facebook.com/salgueirooriginal" title="Facebook">
-                            <img src="./images/facebook.png" alt="Ir para Facebook" />
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.youtube.com/salgueiroficial" title="Youtube">
-                            <img src="./images/youtube.png" alt="Ir para Youtube" />
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://x.com/salgueiroficial" title="X | Twitter">
-                            <img src="./images/x.png" alt="Ir para X" />
-                        </a>
-                    </li>
-                </ul>
-            </div>
-    </div>
-    <div class="container">
-        <h3>VENHA NOS VISITAR</h3>
-        <h4>QUADRA</h4>
-        <p>
-            Rua Silva Teles, 104 - Andaraí
-            Rio de Janeiro -RJ - CEP 20541-110
-            Tel.: (21) 3172-0518
-        </p>
-        <h4>FÁBRICA DE ALEGORIAS</h4>
-        <p>
-            Rua Rivadávia Correia, 60 - Barracão 8 - Gamboa
-            Rio de Janeiro - RJ - CEP: 20220-290
-        </p>
-    </div>
-    </div>
-    </div>
-    </section>
+        <div>
+            <section>
+                <div class="container">
+                    <h3>SIGA-NOS NAS REDES SOCIAIS</h3>
+                    <ul class="social-links">
+                        <li>
+                            <a href="https://www.instagram.com/salgueirooriginal/" title="Instagram">
+                                <img src="./images/instagram.png" alt="Ir para Instagram" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.facebook.com/salgueirooriginal" title="Facebook">
+                                <img src="./images/facebook.png" alt="Ir para Facebook" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.youtube.com/salgueiroficial" title="Youtube">
+                                <img src="./images/youtube.png" alt="Ir para Youtube" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://x.com/salgueiroficial" title="X | Twitter">
+                                <img src="./images/x.png" alt="Ir para X" />
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+        </div>
+                <div class="container">
+                    <h3>VENHA NOS VISITAR</h3>
+                    <h4>QUADRA</h4>
+                    <p>
+                        Rua Silva Teles, 104 - Andaraí
+                        Rio de Janeiro -RJ - CEP 20541-110
+                        Tel.: (21) 3172-0518
+                    </p>
+                    <h4>FÁBRICA DE ALEGORIAS</h4>
+                    <p>
+                        Rua Rivadávia Correia, 60 - Barracão 8 - Gamboa
+                        Rio de Janeiro - RJ - CEP: 20220-290
+                    </p>
+                </div>
+            </section>
     <footer>
         <div class="container">
             &copy; G.R.E.S Acadêmicos do Salgueiro | Todos os direitos reservados - 2025
         </div>
     </footer>
 </body>
-
 </html>
